--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
 <h1>Lin Fox Gamer </h1>
 <P>Canal Oficial do Criador de Mods e Texturas Linfox do Curseforge e Planet Minecraft</P>
+    
+    Perfis
+    <a href="https://www.planetminecraft.com/member/lin_fox/">Planet Minecraft</a> </br>
+    <a href="https://www.curseforge.com/members/linfoxgamer/projects">Curse Forge</a>
+    
 <P> Em breve </p>
 </body>
 </html>
