--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Criador de Mods e Texturas</title>
+  <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+  <meta name="author" content="https://leandro-csouza.github.io/" />
+  <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon" />
+  <title>Criador de Mods e Texturas para Minecraft</title>
   </head>
   <body>
 <h1>Lin Fox Gamer </h1>
