--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="https://leandro-csouza.github.io/" />
   <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon" />
   <link rel="apple-touch-icon" href="imgs/apple-touch-icon.png" />
+  <link rel="icon" sizes="192x192" href="imgs/android-chrome-192x192.png" /> 
   <title>Criador de Mods e Texturas para Minecraft</title>
   </head>
   <body>
