atualização da index

--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
   <title>Criador de Mods e Texturas para Minecraft</title>
   </head>
   <body>
-<h1>Lin Fox Gamer </h1>
-<p>Canal Oficial do Criador de Mods e Texturas Linfox do Curseforge</p>  
-<p><a href="https://www.youtube.com/channel/UCO49IYPkvIFP-4MGojx6-sg">menes</a> </br>
+      <header>
+ <div class="row">
+<h1>Lin Fox Gamer</h1>
+<p>Site oficial do criador de Mods e Texturas Linfox do Curseforge</p>  
+</div>
+</header>
+<section>
+  <div class="row">
+<p><a href="https://www.youtube.com/channel/UCO49IYPkvIFP-4MGojx6-sg">Canal do Youtube</a> </br>
 <a href="https://www.curseforge.com/members/linfoxgamer/projects">Curse Forge</a> </p>
-    
+</div>
+</section>
+
 </body>
 </html>
