--- a/index.html
+++ b/index.html
@@ -3,26 +3,128 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-  <meta name="author" content="https://leandro-csouza.github.io/" />
-  <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="imgs/apple-touch-icon.png" />
-  <link rel="icon" sizes="192x192" href="imgs/android-chrome-192x192.png" /> 
-  <title>Criador de Mods e Texturas para Minecraft</title>
-  </head>
-  <body>
-      <header>
- <div class="row">
-<h1>Lin Fox Gamer</h1>
-<p>Site oficial do criador de Mods e Texturas Linfox do Curseforge</p>  
-</div>
-</header>
-<section>
-  <div class="row">
-<p><a href="https://www.youtube.com/channel/UCO49IYPkvIFP-4MGojx6-sg">Canal do Youtube</a> </br>
-<a href="https://www.curseforge.com/members/linfoxgamer/projects">Curse Forge</a> </p>
-</div>
-</section>
+  <meta name="Keywords" content="modpacks, mods, minecarft, curse forge">
+  <meta name="Description" content="Mods para minecraft">
+  <meta name="Author" content="Leandro de Souza" />
+  <link rel="stylesheet" type="text/css" href="css/grid.css">
+  <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Lin Fox - Criador de Mods para Minecraft</title>
+</head>
+<body>
+  <main>
+    <header id="home">
+      <nav>
+        <div class="row">
+          <div class="container align-center">
+            <a class="logo" href="index.html" title="Lin Fox - Criador de Mods para Minecraft">
+              <img src="img/logo-linfox.png" width="160" height="auto"></a>
+            <ul class="navigation">
+              <li><a href="index.html" title="Página inicial">Home</a></li>
+              <li><a href="#youtube" title="Youtube">Youtube</a></li>
+              <li><a href="#mods" title="Mods Minecraft">Mods Minecraft</a></li>
+            </ul>
+            <i class="ion-android-menu nav-toggle"></i>
+          </div>
+      </nav>
+      </div>
+    </header>
+    <section id="mods">
+      <div class="row">
+        <h1>Mods para Minecraft</h1>
+      </div>
+      <div class="row">
+        <div class="col span_1_of_3 box">
+          <p><img src="mods/ultimate-warden-modpack.jpg" class="imagem"></p>
+          <p>The Ultimate Warden Modpack</p> 
+          <a href="https://www.curseforge.com/minecraft/modpacks/the-ultimate-warden-modpack/download/3398371" title="Download"><i class="ion-ios-download big"></i></a> <a href="https://www.curseforge.com/minecraft/modpacks/the-ultimate-warden-modpack" target="_blank" title="Visualizar"><i class="ion-ios-search big"></i></a>
+        </div>
+        <div class="col span_1_of_3 box">
+          <p><img src="mods/deeper-in-the-caves.jpg" class="imagem"></p>
+          <p>Deeper in the Caves - Warden Mod</p>
+          <a href="https://www.curseforge.com/minecraft/mc-mods/linfox-stacked-dimensions-warden-edition/download/3318155" title="Download"><i class="ion-ios-download big"></i></a>
+         <a href="https://www.curseforge.com/minecraft/mc-mods/linfox-stacked-dimensions-warden-edition" title="Visualizar"><i class="ion-ios-search big"></i></a> 
+        </div>
+        <div class="col span_1_of_3 box">
+          <p><img src="mods/brazil-fields.jpg" class="imagem"></p>
+          <p>Brazilian Fields</p>
+          <a href="https://www.curseforge.com/minecraft/mc-mods/brazilian-fields/download/3297342" title="Download"><i class="ion-ios-download big"></i></a>
+          <a href="https://www.curseforge.com/minecraft/mc-mods/brazilian-fields" title="Visualizar"><i class="ion-ios-search big"></i></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col span_1_of_3 box">
+          <p><img src="mods/drip-style.jpg" class="imagem"></p>
+          <p>Drip Style</p> 
+          <a href="https://www.curseforge.com/minecraft/mc-mods/drip-style/download/3225521" title="Download"><i class="ion-ios-download big"></i></a> <a href="https://www.curseforge.com/minecraft/mc-mods/drip-style" target="_blank" title="Visualizar"><i class="ion-ios-search big"></i></a>
+        </div>
+        <div class="col span_1_of_3 box">
+          <p><img src="mods/the-desertic-end.jpg" class="imagem"></p>
+          <p>The Desertic End</p>
+          <a href="https://www.curseforge.com/minecraft/mc-mods/the-desertic-end/download/3214993" title="Download"><i class="ion-ios-download big"></i></a>
+         <a href="https://www.curseforge.com/minecraft/mc-mods/the-desertic-end" title="Visualizar"><i class="ion-ios-search big"></i></a> 
+        </div>
+        <div class="col span_1_of_3 box">
+          <p><img src="mods/egg-plus.jpg" class="imagem"></p>
+          <p>Egg Plus</p>
+          <a href="https://www.curseforge.com/minecraft/mc-mods/egg-plus/download/3185785" title="Download"><i class="ion-ios-download big"></i></a>
+          <a href="https://www.curseforge.com/minecraft/mc-mods/egg-plus" title="Visualizar"><i class="ion-ios-search big"></i></a>
+        </div>
+      </div>
+      <div class="row box">
+      <p>Todos os mods</p>
+      <a href="https://www.curseforge.com/members/linfoxgamer/projects" target="_blank" title="Perfil no Curse Forge"><i class="ion-log-in big"></i></a>
 
+      </div>
+    </section>
+    <section id="youtube">
+      <div class="row box">
+        <h2>Videos no Youtube</h2>
+      </div>
+      <div class="row">
+      <div class="col span_1_of_3 box">
+        <a href="https://www.youtube.com/watch?v=jSGFAFypFC4">
+        <p><img src="img/warden-apparition.jpg" class="imagem"></p>
+        <p>Warden Apparition</p></a>
+      </div>
+      <div class="col span_1_of_3 box">
+        <a href="https://www.youtube.com/watch?v=s1Zw83fINkI&t=105s">
+        <p><img src="img/made-warden.jpg" class="imagem"></p>
+        <p>I Made Warden into Minecraft!!</p></a>
+      </div>
+      <div class="col span_1_of_3 box">
+        <a href="https://www.youtube.com/watch?v=-tOmk-2j7JY">
+        <p><img src="img/dimension-stack.jpg" class="imagem"></p>
+        <p>Dimension Stack Demonstration</p></a>
+      </div>
+      <div class="row box">
+        <p>Canal do Youtube</p>
+        <a href="https://www.youtube.com/channel/UCO49IYPkvIFP-4MGojx6-sg" target="_blank"><i class="ion-social-youtube-outline big"></i></a>
+        </div>
+        </div>
+      
+    </section>
+  </main>
+  <footer>
+    <div class="row">
+      <div class="col span_1_of_3 box">
+        <h4>Lin Fox</h4>
+        <p>Criador de Mods para Minecraft</p>
+      </div>
+      <div class="col span_1_of_3 box">
+        <h4>Games</h4>
+      </div>
+      <div class="col span_1_of_3 box">
+        <h4>Links</h4>
+        <ul>
+          <li><a href="https://www.youtube.com/channel/UCO49IYPkvIFP-4MGojx6-sg" title="Youtube" target="_blank">Youtube</a></li>
+          <li><a href="https://github.com/linfoxgamer" title="Github" target="_blank">Github</a></li>
+          <li><a href="https://www.curseforge.com/members/linfoxgamer/projects" title="Curse Forge">Curse forge</a></li>
+        </ul>
+      </div>
+    </div>                                       
+      
+  </footer>
+  <script src="./js/main.js"></script>
 </body>
 </html>
