inserção de item no menu e conteudo FNF

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
               <li><a href="index.html" title="Página inicial">Home</a></li>
               <li><a href="#youtube" title="Youtube">Youtube</a></li>
               <li><a href="#mods" title="Mods Minecraft">Mods Minecraft</a></li>
+              <li><a href="#modsfnf" title="Mods FNF">Mods FNF</a></li>
             </ul>
             <i class="ion-android-menu nav-toggle"></i>
           </div>
@@ -77,6 +78,24 @@
 
       </div>
     </section>
+    <section id="modsfnf">
+      <div class="row">
+        <h1>Mods para FNF</h1>
+      </div>
+      <div class="row">
+        <div class="col span_1_of_3 box">
+          <p><img src="mods/linvsmini.jpg" class="imagem"></p>
+          <p>LinFox vs Mini Raposa Gamer</p> 
+          <a href="https://gamejolt.com/get/build?game=714489&build=12202223398371" title="Download"><i class="ion-ios-download big"></i></a> <a href="https://gamejolt.com/games/linvsmini/714489" target="_blank" title="Visualizar"><i class="ion-ios-search big"></i></a>
+        </div>
+        <div class="col span_1_of_3 box">
+
+        </div>  
+    <div class="col span_1_of_3 box">
+          
+        </div>  
+      </div>
+    </section>
     <section id="youtube">
       <div class="row box">
         <h2>Videos no Youtube</h2>
@@ -109,7 +128,7 @@
     <div class="row">
       <div class="col span_1_of_3 box">
         <h4>Lin Fox</h4>
-        <p>Criador de Mods para Minecraft</p>
+        <p>Criador de Mods para Minecraft e FNF</p>
       </div>
       <div class="col span_1_of_3 box">
         <h4>x</h4>
@@ -126,5 +145,7 @@
       
   </footer>
   <script src="./js/main.js"></script>
+   <script src="./js/jquery.waypoints.min.js"></script>
+   <script src="./js/script.js"></script>
 </body>
 </html>
