Trocando Nome do Lin VS MINI para Miner Disco!

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col span_1_of_3 box">
           <p><img src="mods/linvsmini.jpg" class="imagem"></p>
-          <p>LinFox vs Mini Raposa Gamer</p> 
+          <p>Miner Disco</p> 
           <a href="https://gamejolt.com/get/build?game=714489&build=12202223398371" title="Download"><i class="ion-ios-download big"></i></a> <a href="https://gamejolt.com/games/linvsmini/714489" target="_blank" title="Visualizar"><i class="ion-ios-search big"></i></a>
         </div>
         <div class="col span_1_of_3 box">
