--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/grid.css">
   <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
    <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Lin Fox - Criador de Mods para Minecraft</title>
+  <title>Lin Fox - Projeto Brasil</title>
 </head>
 <body>
   <main>
