--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <section id="mods">
       <div class="row">
-        <h1>Mods para Minecraft</h1>
+        <h1>Mods do Projeto</h1>
       </div>
       <div class="row">
         <div class="col span_1_of_3 box">
