--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     </header>
     <section id="mods">
       <div class="row">
+      <p><img src="img/teste.png" class="imagem"></p>
+      </div>
+      <div class="row">
         <h1>Mods do Projeto</h1>
       </div>
       <div class="row">
