--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
     </header>
     <section id="mods">
       <div class="row">
-      <p><img src="img/teste.png" class="imagem"></p>
+      <p><img src="img/banner-projetobrasil.jpg" class="imagem"></p>
       </div>
       <div class="row">
         <h1>Mods do Projeto</h1>
       </div>
       <div class="row">
         <div class="col span_1_of_3 box">
-          <p><img src="mods/ultimate-warden-modpack.jpg" class="imagem"></p>
-          <p>The Ultimate Warden Modpack</p> 
-          <a href="https://www.curseforge.com/minecraft/modpacks/the-ultimate-warden-modpack/download/3398371" title="Download"><i class="ion-ios-download big"></i></a> <a href="https://www.curseforge.com/minecraft/modpacks/the-ultimate-warden-modpack" target="_blank" title="Visualizar"><i class="ion-ios-search big"></i></a>
+          <p><img src="mods/embreve.jpg" class="imagem"></p>
+          <p>EM BREVE...</p> 
+          <a href="https://play-lh.googleusercontent.com/EPV1TB4So1lB0DGrdCVExDpNU8ML67nd8OqBeoOIM-s6sDicxmDdPvCXD6n7LKevFl0" title="Download"><i class="ion-ios-download big"></i></a> <a href="https://play-lh.googleusercontent.com/EPV1TB4So1lB0DGrdCVExDpNU8ML67nd8OqBeoOIM-s6sDicxmDdPvCXD6n7LKevFl0" target="_blank" title="Visualizar"><i class="ion-ios-search big"></i></a>
         </div>
         <div class="col span_1_of_3 box">
-          <p><img src="mods/deeper-in-the-caves.jpg" class="imagem"></p>
-          <p>Deeper in the Caves - Warden Mod</p>
+          <p><img src="mods/bailedase.jpg" class="imagem"></p>
+          <p>Baile da Sé - FNF</p>
           <a href="https://www.curseforge.com/minecraft/mc-mods/linfox-stacked-dimensions-warden-edition/download/3318155" title="Download"><i class="ion-ios-download big"></i></a>
-         <a href="https://www.curseforge.com/minecraft/mc-mods/linfox-stacked-dimensions-warden-edition" title="Visualizar"><i class="ion-ios-search big"></i></a> 
+         <a href="https://gamebanana.com/mods/412733" title="Visualizar"><i class="ion-ios-search big"></i></a> 
         </div>
         <div class="col span_1_of_3 box">
-          <p><img src="mods/brazil-fields.jpg" class="imagem"></p>
-          <p>Brazilian Fields</p>
+          <p><img src="mods/brazilianfields-novo.jpg" class="imagem"></p>
+          <p>Brazilian Fields - MINECRAFT</p>
           <a href="https://www.curseforge.com/minecraft/mc-mods/brazilian-fields/download/3297342" title="Download"><i class="ion-ios-download big"></i></a>
           <a href="https://www.curseforge.com/minecraft/mc-mods/brazilian-fields" title="Visualizar"><i class="ion-ios-search big"></i></a>
         </div>
