arrumando erro :trollface: :trollface: :trollface:

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Keywords" content="modpacks, mods, minecarft, curse forge">
   <meta name="Description" content="Mods para minecraft">
-  <meta name="Author" content="Leandro de Souza" />
+  <meta name="Author" content="Linfox" />
   <link rel="stylesheet" type="text/css" href="css/grid.css">
   <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
    <link rel="stylesheet" type="text/css" href="style.css">
@@ -46,7 +46,7 @@
         <div class="col span_1_of_3 box">
           <p><img src="mods/bailedase.jpg" class="imagem"></p>
           <p>Baile da Sé - FNF</p>
-          <a href="https://www.curseforge.com/minecraft/mc-mods/linfox-stacked-dimensions-warden-edition/download/3318155" title="Download"><i class="ion-ios-download big"></i></a>
+          <a href="https://gamebanana.com/mods/download/412733" title="Download"><i class="ion-ios-download big"></i></a>
          <a href="https://gamebanana.com/mods/412733" title="Visualizar"><i class="ion-ios-search big"></i></a> 
         </div>
         <div class="col span_1_of_3 box">
