--- a/index.html
+++ b/index.html
@@ -62,43 +62,26 @@
 
       </div>
     </section>
-    <section id="modsfnf">
-      <div class="row">
-        <h1>Mods para FNF</h1>
-      </div>
-      <div class="row">
-        <div class="col span_1_of_3 box">
-          <p><img src="mods/linvsmini.jpg" class="imagem"></p>
-          <p>Miner Disco</p> 
-          <a href="https://gamejolt.com/games/linvsmini/714489" title="Download"><i class="ion-ios-download big"></i></a> <a href="https://gamejolt.com/games/linvsmini/714489" target="_blank" title="Visualizar"><i class="ion-ios-search big"></i></a>
-        </div>
-        <div class="col span_1_of_3 box">
 
-        </div>  
-    <div class="col span_1_of_3 box">
-          
-        </div>  
-      </div>
-    </section>
     <section id="youtube">
       <div class="row box">
         <h2>Videos no Youtube</h2>
       </div>
       <div class="row">
       <div class="col span_1_of_3 box">
-        <a href="https://www.youtube.com/watch?v=jSGFAFypFC4">
-        <p><img src="img/warden-apparition.jpg" class="imagem"></p>
-        <p>Warden Apparition</p></a>
+        <a href="https://play-lh.googleusercontent.com/EPV1TB4So1lB0DGrdCVExDpNU8ML67nd8OqBeoOIM-s6sDicxmDdPvCXD6n7LKevFl0">
+        <p><img src="mods/embreve.jpg" class="imagem"></p>
+        <p>Em Breve</p></a>
       </div>
       <div class="col span_1_of_3 box">
-        <a href="https://www.youtube.com/watch?v=s1Zw83fINkI&t=105s">
-        <p><img src="img/made-warden.jpg" class="imagem"></p>
-        <p>I Made Warden into Minecraft!!</p></a>
+        <a href="https://www.youtube.com/watch?v=FEoap4NRghE&list=PLF_0krxeusKdbahxSufCV-ORrAbA2Brjq">
+        <p><img src="img/playlist.png" class="imagem"></p>
+        <p>Playlist Baile da SÉ Ost</p></a>
       </div>
       <div class="col span_1_of_3 box">
         <a href="https://www.youtube.com/watch?v=-tOmk-2j7JY">
-        <p><img src="img/dimension-stack.jpg" class="imagem"></p>
-        <p>Dimension Stack Demonstration</p></a>
+        <p><img src="img/thumbnail-brazilian-fields.png" class="imagem"></p>
+        <p>Brazilian Fields 4.0 Trailer</p></a>
       </div>
       <div class="row box">
         <p>Canal do Youtube</p>
