atualização no site

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row">
       <div class="col span_1_of_3 box">
         <a href="https://play-lh.googleusercontent.com/EPV1TB4So1lB0DGrdCVExDpNU8ML67nd8OqBeoOIM-s6sDicxmDdPvCXD6n7LKevFl0">
-        <p><img src="mods/embreve.jpg" class="imagem"></p>
+        <p><img src="img/thumbnail-embreve.jpg" class="imagem"></p>
         <p>Em Breve</p></a>
       </div>
       <div class="col span_1_of_3 box">
@@ -94,8 +94,8 @@
   <footer>
     <div class="row">
       <div class="col span_1_of_3 box">
-        <h4>Lin Fox</h4>
-        <p>Criador de Mods para Minecraft e FNF</p>
+        <h4>Descrição</h4>
+        <p>Uma Colaboração entre MiniRaposaGamer e LinFox para colocar coisas brasileiras em jogos diversos</p>
       </div>
       <div class="col span_1_of_3 box">
         <h4>x</h4>
@@ -103,9 +103,9 @@
       <div class="col span_1_of_3 box">
         <h4>Links</h4>
         <ul>
-          <li><a href="https://www.youtube.com/channel/UCO49IYPkvIFP-4MGojx6-sg" title="Youtube" target="_blank">Youtube</a></li>
-          <li><a href="https://github.com/linfoxgamer" title="Github" target="_blank">Github</a></li>
-          <li><a href="https://www.curseforge.com/members/linfoxgamer/projects" title="Curse Forge">Curse forge</a></li>
+          <li><a href="https://www.youtube.com/@miniraposagamer" title="Youtube" target="_blank">Youtube MiniRaposaGamer</a></li>
+          <li><a href="https://www.youtube.com/@LinFoxGamer" title="Github" target="_blank">Youtube LinFox</a></li>
+          <li><a href="https://github.com/linfoxgamer/projetobrasil" title="Curse Forge">Source do Site</a></li>
         </ul>
       </div>
     </div>                                       
