--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <ul class="navigation">
               <li><a href="index.html" title="Página inicial">Home</a></li>
               <li><a href="#youtube" title="Youtube">Youtube</a></li>
-              <li><a href="#mods" title="Mods Minecraft">Mods Minecraft</a></li>
-              <li><a href="#modsfnf" title="Mods FNF">Mods FNF</a></li>
+              <li><a href="#mods" title="Mods do Projeto">Mods Minecraft</a></li>
             </ul>
             <i class="ion-android-menu nav-toggle"></i>
           </div>
