--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Keywords" content="modpacks, mods, minecarft, curse forge">
-  <meta name="Description" content="Mods para minecraft">
-  <meta name="Author" content="Linfox" />
+  <meta name="Keywords" content="modpacks, mods, minecraft, brasil, brazil, curse forge">
+  <meta name="Description" content="Um Projeto de Mods Brasileiros">
+  <meta name="Author" content="Linfox e Leandro-csouza" />
   <link rel="stylesheet" type="text/css" href="css/grid.css">
   <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
    <link rel="stylesheet" type="text/css" href="style.css">
@@ -17,8 +17,8 @@
       <nav>
         <div class="row">
           <div class="container align-center">
-            <a class="logo" href="index.html" title="Lin Fox - Criador de Mods para Minecraft">
-              <img src="img/logo-linfox.png" width="160" height="auto"></a>
+            <a class="logo" href="index.html" title="Lin Fox - Projeto Brasil">
+              <img src="img/logo-atual.jpg" width="160" height="auto"></a>
             <ul class="navigation">
               <li><a href="index.html" title="Página inicial">Home</a></li>
               <li><a href="#youtube" title="Youtube">Youtube</a></li>
