agora sim atualização final :godmode:

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <a class="logo" href="index.html" title="Lin Fox - Projeto Brasil">
               <img src="img/logo-atual.jpg" width="160" height="auto"></a>
             <ul class="navigation">
-              <li><a href="index.html" title="Página inicial">Home</a></li>
+              <li><a href="https://linfoxgamer.github.io/" title="Página inicial">Home</a></li>
               <li><a href="#youtube" title="Youtube">Youtube</a></li>
-              <li><a href="#mods" title="Mods do Projeto">Mods Minecraft</a></li>
+              <li><a href="#mods" title="Mods do Projeto">Mods</a></li>
             </ul>
             <i class="ion-android-menu nav-toggle"></i>
           </div>
